Update gettingstarted.md
Former-commit-id: 6122a47e2c1812ec601604945418e96a12bc5c77